--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,10 +1,1 @@
-@import "./variables/colors"
-@import "./reset"
-@import "./blocks/card"
-@import "./blocks/container"
-@import "./blocks/mobile-header"
-@import "./blocks/sheet"
-@import "./blocks/showcase"
-@import "./blocks/sidebar"
-@import "./blocks/slider"
-@import "./blocks/social"
+@import "./layout"
